Fix FAQ alignment issue (#4795)

--- a/src/app/(proper_react)/(redesign)/(public)/Faq.module.scss
+++ b/src/app/(proper_react)/(redesign)/(public)/Faq.module.scss
@@ -42,7 +42,8 @@
       align-items: center;
       font: $text-body-lg;
       cursor: pointer;
-      text-align: center;
+      text-align: start;
+
       svg {
         color: $color-blue-60;
         width: 12px;
